--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     margin: 0;
-    font-size: 1.5rem;    
+    font-size: 1rem;    
 }
 
 h1 {
@@ -30,6 +30,7 @@ h1 {
     text-align: center;
     padding: 0.5rem;
     font-weight: lighter;
+    font-size: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -50,7 +51,7 @@ select {
     margin: 3em;
     display: flex;
     flex-wrap: wrap;
-    gap: 6em;
+    gap: 4em;
     align-items: center;
     justify-content: center;
     /*display: flex;
@@ -62,9 +63,9 @@ select {
 }
 
 .card {
-    font-size: 1.1rem;
-    width: 400px;
-    height: 580px;
+    font-size: 1rem;
+    width: 300px;
+    height: 500px;
     text-align: center;
     justify-content: center;
     border-radius: 20px;
@@ -77,7 +78,7 @@ select {
 
 .imgAndName {
     width: inherit;
-    height: 450px;
+    height: 380px;
     background-color: #000;
     color: #FFFFFF;
     font-weight: lighter;
@@ -89,20 +90,37 @@ select {
     border-top-left-radius: inherit;
 }
 
+.cardNames {
+    height: 80px;
+    padding: 0.2rem;
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+    /*como achicar distancia vertical entre los párrafos?*/
+}
+
+.scientificName {
+    font-style: italic;
+}
+
 .cardImg {
     margin: auto;
-    width: 400px;
-    height: 400px; /* con min-height*/
+    margin-top: 0;
+    width: 300px;
+    height: 300px; /* con min-height*/
     position: inherit;
     border-radius: inherit;
 }
 
 .birdFacts {
-    margin: 0.5rem;
+    height: 180px;
+    width: fit-content;
+    margin: 0.2rem;
     display: flex;
     list-style: circle;
     align-items: flex-start;
+    justify-content: center;
     flex-direction: column;
+    font-size: 0.8rem;
 }
 
 footer {
@@ -113,5 +131,5 @@ footer {
     text-align: center;
     justify-content: center;
     padding: 0.1rem;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
 }
