Estadísticas y test unitarios

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ header {
     font-size: 1rem;    
 }
 
-#titlePrincipal {
+h1 {
     background-color: #739915;
     width: 100%;
     color: #e8f4ca;
@@ -31,9 +31,10 @@ header {
     background-color: white;
     color: #4d6b00;
     margin: 0;
-    margin-left: 4rem;
+    margin-left: 6rem;
+    width: 100%;
     text-align: center;
-    padding: 0.1rem;
+    padding: 1rem 2.5rem 1rem 2.5rem;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
     display: flex;
@@ -41,6 +42,7 @@ header {
     align-items: center;
     position: fixed;
     top: 59px;
+    margin-left: 0.5rem;
 }
 
 select {
@@ -50,21 +52,21 @@ select {
     border-style:groove;
     border: solid thin #C39469;
     text-align:left;
-    margin-top: 0.6rem;
-    margin-inline-start: 0.6rem;
-    margin-inline-end: 6rem;
+    margin-top: 0;
+    margin-inline-start: 0.5rem;
+    margin-inline-end: 8rem;
     max-width: 8rem;
     padding: 0.5rem;
-    width: 8%;
+    width: 100%;
     font-size: 0.8rem;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .cardsContainer {
-    margin: 9em;
+    margin-top: 180px;
     display: flex;
     flex-wrap: wrap;
-    gap: 4em;
+    gap: 3.8rem;
     align-items: center;
     justify-content: center;
 }
@@ -92,17 +94,14 @@ select {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     border-top-right-radius: inherit;
     border-top-left-radius: inherit;
 }
 
 .cardNames {
-    height: 80px;
-    padding: 0.2rem;
-    margin-top: 0.2rem;
-    margin-bottom: 0.2rem;
-    /*como achicar distancia vertical entre los párrafos?*/
+    height: 60px;
+    padding: 0.5rem;
 }
 
 .scientificName {
@@ -130,7 +129,38 @@ select {
     flex-direction: column;
     font-size: 0.9rem;
     font-family: Arial, Helvetica, sans-serif;
-    padding-left: 0.8rem;
+    padding: 1rem 1rem 3rem 1rem;
+}
+
+#buttonInfo {
+    background-color: #4d6b00;
+    color: white;
+    border-radius: 0.3rem;
+    font-size: 0.8rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#infoBird {
+    height: fit-content;
+    width: 380px;
+    padding: 1rem 2rem 1rem 2rem;
+    border-radius: 20px;
+    border: solid thin #C39469;
+    color: #585858;
+}
+
+#titleInfo {
+    color: #4d6b00;
+    
+}
+
+#closeInfo {
+    margin-top: 0rem;
+    margin-left: 23rem;
+    border-radius: 15px;
+    border: solid thin #C39469;
+    padding: 0.2rem;
+    width: 1.5rem;
 }
 
 footer {
@@ -185,28 +215,37 @@ footer {
 #statisticsWindowOpen{
     background-color: white;
     color: black; 
+    border: solid thin #C39469;
     width: 300px;
-    height: 300px;
+    height: 200px;
     font-size: 0.5rem;
 }
+
 #titleStatistics{
     background-color: #739915;
     width: 100%;
     height: 1.8rem;
     color: #e8f4ca;
+    font-size: 1rem;
     padding: 0.4rem 0 0 0;
     font-weight: lighter;
     margin-top: 0;
     margin-left: 0;
 }
 
+.statisticTitle{
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    font-size: 0.6rem;  
+}
+
 #statisticsWindowClose{
-    background-color: #4d6b00;
+    background-color: #739915;
+    margin-left: 165px;
+    width: fit-content;
     color: white;
-    border-radius: 0.5rem;
     font-size: 1rem;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    padding: 0.4rem;  
 }     
 
 canvas{
